--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/ucd-cws">ucd-cws</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
