--- a/_includes/cws-head.html
+++ b/_includes/cws-head.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="shortcut icon" href="https://watershed.ucdavis.edu/files/fav_watershed_0.gif" type="image/gif" />
 
-<link href="/assets/stylesheets/bootstrap.css" rel="stylesheet">
+<link href="{{ page.url }}/assets/stylesheets/bootstrap.css" rel="stylesheet">
 <link href="/assets/stylesheets/bootstrap-theme.css" rel="stylesheet">
 <link href="/assets/stylesheets/bootstrap-cws.css" rel="stylesheet">
 <link href="/assets/stylesheets/style.css" rel="stylesheet">
