more link fixes

--- a/_includes/cws-header.html
+++ b/_includes/cws-header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="navbar-header">
             <a class="logo navbar-btn pull-left" href="https://watershed.ucdavis.edu" title="Home">
-            <img src="/assets/images/cws_logo_48.png" alt="Home" />
+            <img src="{{ site.github.url }}/assets/images/cws_logo_48.png" alt="Home" />
             </a>
 
 
@@ -17,8 +17,8 @@
         <div class="navbar-collapse collapse">
             <nav role="navigation">
                 <ul class="menu nav navbar-nav">
-                    <li class="first leaf"><a href="/" title="News and Announcements">Home</a></li>
-                    <li class="first leaf"><a href="/maps" title="News and Announcements">Maps</a></li>
+                    <li class="first leaf"><a href="{{ site.github.url }}" title="News and Announcements">Home</a></li>
+                    <li class="first leaf"><a href="{{ site.github.url }}/maps" title="News and Announcements">Maps</a></li>
                 </ul>
             </nav>
         </div>
